@@ -1,3 +1,9 @@
+2015-05-10  Stuart Caie <kyzer@4u.net>
+
+	* Makefile.am: Add subdir-objects option as suggested by autoreconf.
+
+	* configure.ac: Add AM_PROG_AR as suggested by autoreconf.
+
 2015-02-25  Stuart Caie <kyzer@4u.net>
 
 	* create_output_name(): Simplify code; do path checking only after
